[package]
name = "sling"
version = "0.1.0"
authors = ["seancarroll"]
edition = "2018"
repository = "https://github.com/doctavious/sling"
keywords = ["OOXML", "PowerPoint"]
categories = ["documentation", "presentations"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
xml-rs = "0.8.3"
# quick-xml = "0.4.2"